--- a/_config.yml
+++ b/_config.yml
@@ -19,20 +19,67 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Cellulove
+brand: Cellulove
+author: Dalia Yousef
 email: daliayousef7@gmail.com
+copyright: cellulove.me
 description: >- # this means to ignore newlines until "baseurl:"
   Cellulove is a blog demonstrating the similarities between human cells and tissues
   and everything surrounding us. Content of this website is authored by Doctor
   Dalia Yousef, assistant lecturer of histology and cell biology at Ain Shams University
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://cellulove.me" # the base hostname & protocol for your site, e.g. http://example.com
+
+# SEO
+social:
+  name: Dalia Yousef
+  links:
+    - https://github.com/kimfucious
+    - https://www.linkedin.com/in/kimaford/
+webmaster_verifications:
+  google: uubLfpcORmDWkM8pI-yKODVVZD3VSpUYFSwkQJcOuZE
+
+# Social icons
+show_social_icons: true
+facebook_username: dahlia.matouk
+linkedin_username: dalia-yousef-04486949
+
+# Collections
+collections:
+  posts:
+    output: true
+    permalink: "/:collection/:title/"
+
+# Defaults : these allow you to set default values for front matter
+defaults:
+  - scope:
+      path: "_posts"
+      type: posts
+    values:
+      layout: post 
+      type: post
+  - scope:
+      path: "pages"
+      type: pages
+    values:
+      layout: default 
+
+# Pagination (using jekyll-paginate-v2)
+pagination:
+  enabled: true
+  per_page: 8 
+  paginate_path: "/page:num"
+  sort_reverse: true
+  title: ":title"
+  trail:
+    before: 2
+    after: 2
+
+# Plugins
+plugins: [jekyll-paginate-v2, jemoji, jekyll-sitemap, jekyll-seo-tag, jekyll-feed]
 
 # Build settings
 theme: minima
-plugins:
-  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
